Fixed a few issues in dark mode

--- a/app/resources/assets/sass/accessible-dark-mode.scss
+++ b/app/resources/assets/sass/accessible-dark-mode.scss
@@ -8,8 +8,12 @@ body, .dialog .footer {
 	background-color: rgb(32, 32, 32) !important;
  }
 
-.card, .bg-light {
+.card, .bg-light, .bg-white {
 	background-color: rgb(52, 58, 64) !important;
+}
+
+.text-muted {
+	color: rgba(255, 255, 255, 0.66) !important;
 }
 
 a, b, span, p, li, tr, th, td, h1, h2, h3, h4, h5, h6, label, ins, select, div.card-header {
@@ -20,10 +24,14 @@ tr, li, nav.mobile, nav.desktop, .cd-morph-dropdown, .cd-morph-dropdown .content
 	background-color: rgb(52, 58, 64) !important;
 }
 
-.btn, .btn-light, select, .dropdown-list, .morph-dropdown-wrapper, .form-control, .dialog {
+.btn, .btn-light, select, .dropdown-list, .morph-dropdown-wrapper, .form-control, .dialog, .jconfirm-box {
 	background-color: rgb(52, 58, 64) !important;
 	border-color: rgb(73, 77, 82) !important;
 	color: rgba(255, 255, 255, 0.88) !important;
+}
+
+.btn > svg > path {
+	fill: rgba(255, 255, 255, 0.88) !important;
 }
 
 .cd-morph-dropdown .content ul a {
